# nsrc-perception-challenge

./: .gitignore  LICENSE  README.md
catkin_ws/src/cam_proc/: CMakeLists.txt  dummy_LED_locator.launch  package.xml
catkin_ws/src/cam_proc/msg/: pixel_loc.msg
catkin_ws/src/cam_proc/src/: LED_dummy_hunter.py  LED_dummy_image.py  LED_hunter.py
catkin_ws/src/cloud_proc/: CMakeLists.txt  all_nodes.launch  dummy_data_all_nodes.launch  dummy_stereo_locator.launch  laser_hack.launch  package.xml
catkin_ws/src/cloud_proc/src/: laser_snapshotter.cpp  lidar_dummy_cloud.cpp  lidar_point_locator.cpp  point_aggregator.cpp  stereo_dummy_cloud.cpp  stereo_point_locator.cpp  tf_transcriber.cpp
development/cpp/: CMakeLists.txt  Instructions for building.txt  cloud_compare_sensors.cpp  cloud_find_in_new_cloud.cpp  cloud_find_xyz.cpp  cloud_transformer.cpp  cloud_viewer.cpp
development/python/: LED_huntin.py  image_proc_2d_tests.py
development/test_data/: Frame summary.txt
development/test_data/single_camera_images/: README.txt
